--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -12,6 +12,7 @@
             android:layout_height="match_parent"
             android:background="#00550033" />
 
+    <!-- We have place for details fragment in landscape mode -->
     <FrameLayout
             android:id="@+id/details" android:layout_weight="2"
             android:layout_width="0px"
